Fixing weird layout bug

--- a/_source/_assets/styles/components/example.css
+++ b/_source/_assets/styles/components/example.css
@@ -41,8 +41,13 @@
   height: auto;
 }
 
+.c-ex__content pre {
+  height: 0;
+}
+
 .c-ex__content.active pre {
   display: block;
+  height: 100%;
   max-height: 25rem;
   overflow-y: scroll;
 }
